Add clear requests

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,9 +15,10 @@
     </head>
 
     <body>
-        <li id="output" >
+        <button id="clear">clear requests</button>
+        <ul id="output" >
 
-        </li>
+        </ul>
         <script src="console.js"></script>
     </body>
 
