Add start button

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,9 @@
     </head>
 
     <body>
+        <button id="intercept">start intercept</button>
         <button id="clear">clear requests</button>
+
         <ul id="output" >
 
         </ul>
