--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,14 +10,49 @@
          }
          .status {
              color: green;
-             }
+         }
+         .type {
+             color: purple;
+         }
+         ul {
+             list-style: square outside none;
+         }
+         button {
+             overflow: hidden;
+
+             margin: 10px;
+             padding: 12px 12px;
+
+             cursor: pointer;
+             user-select: none;
+             transition: all 60ms ease-in-out;
+             text-align: center;
+             white-space: nowrap;
+             text-decoration: none !important;
+             text-transform: capitalize;
+
+             border: 0 none;
+             border-radius: 4px;
+
+             font-size: 14px;
+             font-weight: 500;
+             line-height: 1.3;
+             background-color: #edeeee;
+         }
+         button:hover {
+             transition: all 60ms ease;
+             opacity: .85;
+         }
+
+
         </style>
     </head>
 
     <body>
-        <button id="intercept">start intercept</button>
+        <button id="intercept">intercept</button>
         <button id="clear">clear requests</button>
-
+        <button id="export">export</button>
+        <hr>
         <ul id="output" >
 
         </ul>
