Add select and fixed undefined

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -52,6 +52,15 @@
         <button id="intercept">intercept</button>
         <button id="clear">clear requests</button>
         <button id="export">export</button>
+        <select id="selectedType">
+            <option value="all" selected>all types</option>
+            <option value="main_frame">main frame</option>
+            <option value="stylesheet">stylesheet</option>
+            <option value="image">image</option>
+            <option value="media">media</option>
+            <option value="script">script</option>
+            <option value="xml">xml http request</option>
+        </select>
         <hr>
         <ul id="output" >
 
