--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,6 +17,13 @@
          ul {
              list-style: square outside none;
          }
+         select {
+             background: transparent;
+             font-size: 14px;
+             height: 40px;
+             padding: 5px; /* If you add too much padding here, the options won't show in IE */
+             width: 268px;
+         }
          button {
              overflow: hidden;
 
